--- a/renderer/styles/globals.css
+++ b/renderer/styles/globals.css
@@ -2,12 +2,12 @@
 
 @layer base {
   body {
-    @apply bg-gray-900 text-white;
+    @apply bg-gray-100 text-gray-900;
   }
 }
 
 @layer components {
   .btn-blue {
-    @apply text-white font-bold px-4 py-2 rounded bg-blue-600 hover:bg-blue-500;
+    @apply text-gray-900 font-bold px-4 py-2 rounded bg-blue-600 hover:bg-blue-500;
   }
 }
